Fixed broken image links, removed duplicated content

--- a/_posts/2007-08-18-im-not-dead-yet.html
+++ b/_posts/2007-08-18-im-not-dead-yet.html
@@ -18,6 +18,6 @@ Well, I have internet because I'm at Christian's parents' apartment, so I figure
 <br />
 On the same note, 8 friends and I will be going to a Germany vs. Romania game in Köln on September 12.  Who's psyched??  I've also got tickets to go see Die Fantastischen Vier (they're like the German Beastie Boys) and then Die Ärzte (German punk band from Berlin) in November.  And next month is Wir Sind Helden in Berlin, woohoo!  (Alex, I'll be sure to take pictures and send them to you)
 <br />
-<img src="/assets/img/IMG_4750.JPG" alt="Cologne" border="0" />
+<img src="/assets/img/IMG_4750.jpg" alt="Cologne" border="0" />
 <br />
 Lastly, does anyone know someone who lives in Köln that needs a roommate starting October 1?  I get to look for my own apartment, but I have to live with Germans and my program needs to approve of it.  I don't have any desire to do it really, but I know in the end, it'll work out.  This year is probably going to fly by, especially considering that I've been here for 3 weeks.  (Yeah, I'm not writing very clearly...I'll admit it...German television is distracting...)<br /><br />Oh yeah, and check out my pictures <a href="http://www.flickr.com/photos/sannielee">here</a>.
